# ESPAsyncButton

./: .gitignore  CHANGELOG.md  CMakeLists.txt  InterruptButton.cpp  InterruptButton.h  README.md  library.json  library.properties
.github/workflows/: pio_build.yml
Examples/: InterruptButtonExample.ino
Examples/01_BasicExample/: main.cpp
examples/: README.md
examples/00_AsyncEventButton/: platformio.ini
examples/00_AsyncEventButton/src/: main.cpp
examples/01_BasicEvents/: platformio.ini
examples/01_BasicEvents/src/: main.cpp
examples/01_BasicExample/src/: main.cpp
examples/02_CallbackMenu/: platformio.ini
examples/02_CallbackMenu/src/: main.cpp
examples/03_PseudoEncoder/src/: main.cpp  src.ino
images/: autorepeat.drawio  multiclick.drawio  short_press.drawio
src/: espasyncbutton.cpp  espasyncbutton.hpp
